Updated ximilar api
